--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<a href="test.html">Test?</a>
+<!DOCTYPE html>
+<html lang="en">
+<link rel="stylesheet" href="css/style.css">
+    <head>
+        <title>Whoa it's me!</title>
+    </head>
+    <body>
+        <h3>Launch</h3>
+        <h6 id="Entertainment">
+            ...
+        </h6>
+        <h6 id="Tech">
+            ...
+        </h6>
+        <h6 id="Misc">
+            ...
+        </h6>
+    </body>
+</html>
