this is worth it

--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
         <title>Whoa it's me!</title>
     </head>
     <body>
-        <h3>Launch</h3>
-        <h6 id="Entertainment">
-            ...
-        </h6>
-        <h6 id="Tech">
-            ...
-        </h6>
-        <h6 id="Misc">
-            ...
-        </h6>
+        <div class="launch">
+            <h3>Launch</h3>
+            <h6 id="Entertainment">
+                ...
+            </h6>
+        </div>
+        <div class="tech">
+            <h6 id="Tech">
+                ...
+            </h6>
+        </div>
+        <div class="misc">
+            <h6 id="Misc">
+                ...
+            </h6>
+        </div>
     </body>
 </html>
