--- a/index.html
+++ b/index.html
@@ -5,21 +5,73 @@
         <title>Whoa it's me!</title>
     </head>
     <body>
-        <div class="launch">
-            <h3>Launch</h3>
-            <h6 id="Entertainment">
-                ...
-            </h6>
+        <h1 id="launch">soft start</h1>
+        <div id="title-container">
+            <div class="title-item entr">
+                <h3 id="entr">
+                    Entertainment
+                </h3>
+            </div>
+            <div class="title-item tech">
+                <h3 id="tech">
+                    Tech
+                </h3>
+            </div>
+            <div class="title-item misc">
+                <h3 id="misc">
+                    Misc
+                </h3>
+            </div>
         </div>
-        <div class="tech">
-            <h6 id="Tech">
-                ...
-            </h6>
+        <div id="list-container">
+            <div class="list-item">
+                <ul id="entr">
+                    <li>
+                        <a href="https://youtube.com">
+                            Youtube
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://fmovies.to">
+                            Movies
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://twitch.tv">
+                            Twitch
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="list-item">
+                <ul id="tech">
+                    <li>
+                        <a href="https://github.com">
+                            Github
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://archlinux.org">
+                            Arch linux
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://python.org">
+                            Python
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="list-item">
+                <ul id="misc">
+                    <li>
+                        Nothing yet!
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="misc">
-            <h6 id="Misc">
-                ...
-            </h6>
+        <div id="clarissa">
+            <p>I love you so much Clarissa :)</p>
         </div>
     </body>
 </html>
