Done for now :eyes:

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <link rel="stylesheet" type="text/css" href="references/style.css">
     <head>
-        <title>Whoa it's me!</title>
+        <title>soft start</title>
     </head>
     <body>
         <h1 id="launch">soft start</h1>
