Done for now :eyes: p2

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
             <div class="list-item">
                 <ul id="entr">
                     <li>
-                        <a href="https://youtube.com">
+                        <a href="https://youtube.com" target="_blank">
                             Youtube
                         </a>
                     </li>
                     <li>
-                        <a href="https://fmovies.to">
+                        <a href="https://fmovies.to" target="_blank">
                             Movies
                         </a>
                     </li>
                     <li>
-                        <a href="https://twitch.tv">
+                        <a href="https://twitch.tv" target="_blank">
                             Twitch
                         </a>
                     </li>
@@ -46,17 +46,17 @@
             <div class="list-item">
                 <ul id="tech">
                     <li>
-                        <a href="https://github.com">
+                        <a href="https://github.com" target="_blank">
                             Github
                         </a>
                     </li>
                     <li>
-                        <a href="https://archlinux.org">
+                        <a href="https://archlinux.org" target="_blank">
                             Arch linux
                         </a>
                     </li>
                     <li>
-                        <a href="https://python.org">
+                        <a href="https://python.org" target="_blank">
                             Python
                         </a>
                     </li>
