Just making it nicer for myself to use

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>soft start</title>
     </head>
     <body>
-        <h1 id="launch">soft start</h1>
+        <h1 id="launch">It's okay, they're only thoughts :)</h1>
         <div id="title-container">
             <div class="title-item entr">
                 <h3 id="entr">
