Oh boy misc category got something

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
             <div class="list-item">
                 <ul id="misc">
                     <li>
-                        Nothing yet!
+                        <a href="https://twitter.com/" target="_blank">
+                            Twitter
+                        </a>
                     </li>
                 </ul>
             </div>
