--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>soft start</title>
     </head>
     <body>
-        <h1 id="launch">It's okay, they're only thoughts :)</h1>
+        <h1 id="launch">"If you’re stressing over happiness, you’re doing it wrong!" - Shannon L. Alder.</h1>
         <div id="title-container">
             <div class="title-item entr">
                 <h3 id="entr">
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div id="clarissa">
-            <p>I love you so much Clarissa :)</p>
+            <p>Clarissa, you make everyday worth it. I love you.</p>
         </div>
     </body>
 </html>
